[package]
name = "ipinfo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tabled = "0.14.0"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
mockito = "1.2.0"
