[package]
name = "ipinfo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tabled = "0.14.0"
thiserror = "1.0.65"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
mockito = "1.2.0"
